Exceptions, Properties and multilingual added with hindi, english and kannada

--- a/web-crud/src/main/resources/application.properties
+++ b/web-crud/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=web-crud
 # change port of application/ tomcat server
 server.port = 8082
+
+spring.messages.basename = mymessages
+spring.messages.encoding = UTF-8
