Spring Boot JPA/ Hibernate with CRUD operation done

--- a/web-crud/src/main/resources/application.properties
+++ b/web-crud/src/main/resources/application.properties
@@ -4,3 +4,13 @@ server.port = 8082
 
 spring.messages.basename = mymessages
 spring.messages.encoding = UTF-8
+
+# database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/pes
+spring.datasource.username=root
+spring.datasource.password=Razak@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+# create>> replace the structure
+# update>> append
+spring.jpa.hibernate.ddl-auto=update
